src/main/default/objects/S3_Document__c/S3_Document__c.object-meta.xml
<CustomObject>
    <label>S3 Document</label>
    <nameField>
        <label>Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>S3 Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>