src/main/default/objects/S3_Document__c/fields/Document_Name__c.field-meta.xml
<CustomField>
    <fullName>Document_Name__c</fullName>
    <label>Document Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>