src/main/default/objects/S3_Document__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>S3_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>